--- a/package.json
+++ b/package.json
@@ -14,11 +14,27 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "graceful-fs": "^4.1.5",
-    "lodash": "^4.14.1",
+    "jsonwebtoken": "^7.1.9",
+    "lodash": "^4.15.0",
     "mysql": "^2.11.1",
     "vash": "^0.12.1"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-cssbeautify": "^0.1.3",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-jshint": "^2.0.1",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-watch": "^4.3.9",
+    "jshint": "^2.9.2",
+    "minimatch": "^3.0.3",
     "morgan": "^1.7.0",
     "nodemon": "^1.10.0"
   },
